# cpp17-parallel

./: .gitignore  CMakeLists.txt
inc/: utils.hpp
src/: main.cpp
